--- a/CreateGRIDTarget/packages.config
+++ b/CreateGRIDTarget/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EvilDICOM" version="2.0.6.5" targetFramework="net472" />
+  <package id="MathNet.Numerics" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net472" />
