--- a/CreateGRIDTarget/packages.config
+++ b/CreateGRIDTarget/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EvilDICOM" version="2.0.6.5" targetFramework="net472" />
   <package id="MathNet.Numerics" version="5.0.0" targetFramework="net472" />
+  <package id="MathNet.Spatial" version="0.6.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net472" />
@@ -11,6 +12,7 @@
   <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net452" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
