--- a/CreateGRIDTarget/packages.config
+++ b/CreateGRIDTarget/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EvilDICOM" version="2.0.6.5" targetFramework="net472" />
+  <package id="ILMerge" version="3.0.29" targetFramework="net472" />
   <package id="MathNet.Numerics" version="5.0.0" targetFramework="net472" />
   <package id="MathNet.Spatial" version="0.6.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
@@ -10,6 +10,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net472" />
+  <package id="MSBuild.ILMerge.Task" version="1.1.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net452" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="net472" />
