--- a/CreateGRIDTarget/CreateGRIDTarget.csproj
+++ b/CreateGRIDTarget/CreateGRIDTarget.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CreateGRIDTarget</RootNamespace>
-    <AssemblyName>CreateGRIDTarget.esapi</AssemblyName>
+    <AssemblyName>CreateLatticeTarget.esapi</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
